# arcxed-backend-fyp

./: .env  Dockerfile  README.md  create_mock_data.py  create_mock_questions.py  dump.rdb  environment.yml  environment_minimal.yml  requirements.txt  requirements2.txt  requirements_backup.txt  requirements_minimal.txt  requirements_ultra_minimal.txt
accounts/: models.py  serializers.py  urls.py  views.py
core/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
leaderboard/: pagination.py  serializers.py  urls.py  views.py
output/: mcq_analysis.json  questions.json
questions/: admin.py  (+8 more)
questions/agents/study_plan/: README.md  pyproject.toml
questions/agents/study_plan/src/study_plan/: main.py  typesx.py
questions/agents/study_plan/src/study_plan/crews/evaluate_user/: evaluate_user.py
questions/agents/study_plan/src/study_plan/crews/evaluate_user/config/: agents.yaml  tasks.yaml
questions/agents/study_plan/src/study_plan/crews/explain_answer/: explain_answer.py
questions/agents/study_plan/src/study_plan/crews/explain_answer/config/: agents.yaml  tasks.yaml
questions/agents/study_plan/src/study_plan/crews/question_generate/: question_generate.py
questions/agents/study_plan/src/study_plan/crews/question_generate/config/: agents.yaml  tasks.yaml
questions/agents/study_plan/src/study_plan/crews/study_plan/: study_plan.py
questions/agents/study_plan/src/study_plan/crews/study_plan/config/: agents.yaml  tasks.yaml
questions/agents/study_plan/src/study_plan/output/: evaluated_user.json  mcq_analysis.json  performance_analysis.json  question_gen.json
(+29 files in other folders)
