[project]
name = "study_plan"
version = "0.1.0"
description = "study_plan using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
]

[project.scripts]
kickoff = "study_plan.main:kickoff"
run_crew = "study_plan.main:kickoff"
plot = "study_plan.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
